package Modelo;

public enum POSITIONS {
    Goalkeeper,
    Defender,
    Midfielder,
    Attacker
}
