package Modelo;

public enum RESULT {
    WON,
    DRAW,
    LOST
}
