@startuml

title __PROYECTOFINALFUTBOL's Class Diagram__\n


    namespace Controlador {
      interface Controlador.Controller {
      }
    }

  


    namespace Controlador {
      class Controlador.LaLigaController {
      }
    }


    namespace Controlador {
      class Controlador.prueba {
      }
    }

    namespace Modelo {
      class Modelo.ExtendedMatch {
      }
    }

    namespace Modelo {
      class Modelo.ExtendedMatch {
      }
    }

  


    namespace Modelo {
      class Modelo.HTTPJSONGET {
      }
    }


    namespace Modelo {
      interface Modelo.IMatch {
      }
    }


    namespace Modelo {
      class Modelo.LaLigaModel {
      }
    }


    namespace Modelo {
      class Modelo.MatchProxy {
      }
    }

    namespace Modelo {
      enum POSITIONS {
      }
    }


    namespace Modelo {
      class Modelo.Player {
      }
    }


    namespace Modelo {
      class Modelo.PruebasModelo {
      }
    }


    namespace Modelo {
      enum RESULT {
      }
    }


    namespace Modelo {
      class Modelo.Standings {
      }
    }


    namespace Modelo {
      class Modelo.Team {
      }
    }


    namespace Vista {
      class Vista.BarChart {
      }
    }

  

    namespace Vista {
      abstract class Vista.Chart {
      }
    }

    namespace Vista {
      abstract class Vista.LaLigaView {
      }
    }

    namespace Vista {
      class Vista.LineChart {
      }
    }

    namespace Vista {
      class Vista.PieChart {
      }
    }

    namespace Vista {
      class Vista.Pruebasview {
      }
    }

    namespace Vista {
      class Vista.ViewFacade {
      }
    }

    namespace Vista {
      class Vista.VistaCLI {
      }
    }

    namespace Vista {
      class Vista.vistaGrafica1 {
      }
    }

  

  Controlador.LaLigaController .up.|> Controlador.Controller
  Controlador.LaLigaController o-- Vista.ViewFacade : fachadaVista
  Controlador.LaLigaController o-- Modelo.LaLigaModel : modelo
  Controlador.LaLigaController o-- Modelo.Team : teamToShow
  Modelo.ExtendedMatch .up.|> Modelo.IMatch
  Modelo.ExtendedMatch .up.|> Modelo.IMatch
  Modelo.LaLigaModel o-- Modelo.Standings : standings
  Modelo.MatchProxy .up.|> Modelo.IMatch
  Modelo.MatchProxy o-- Modelo.ExtendedMatch : extendedMatch
  Modelo.Player o-- Modelo.POSITIONS : position
  Vista.BarChart -up-|> Vista.Chart
  Vista.LaLigaView o-- Controlador.LaLigaController : controller
  Vista.LineChart -up-|> Vista.Chart
  Vista.PieChart -up-|> Vista.Chart
  Vista.ViewFacade o-- Modelo.Team : teamToShow
  Vista.ViewFacade o-- Vista.LaLigaView : vista
  Vista.VistaCLI -up-|> Vista.LaLigaView
  Vista.vistaGrafica1 -up-|> Vista.LaLigaView
  Vista.vistaGrafica1 o-- Vista.Chart : barChartNumJugadoresPorPos
  Vista.vistaGrafica1 o-- Vista.Chart : pieChartPartidosGanadosPerdidosEmpatados


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
